WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23354
Fix up graphics/chromium files to account for Uniscribe scrubbing
https://bugs.webkit.org/show_bug.cgi?id=23354
Summary
Fix up graphics/chromium files to account for Uniscribe scrubbing
Dimitri Glazkov (Google)
Reported
2009-01-15 13:14:36 PST
I accidentally omitted two files from
http://trac.webkit.org/changeset/39941
. These files were changed as a result of scrubbing Uniscribe files.
Attachments
patch v1
(4.96 KB, patch)
2009-01-15 13:18 PST
,
Dimitri Glazkov (Google)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-01-15 13:18:40 PST
Created
attachment 26770
[details]
patch v1 WebCore/ChangeLog | 16 +++++++++++++++ .../platform/graphics/chromium/FontChromiumWin.cpp | 21 +++++++++---------- .../chromium/GlyphPageTreeNodeChromiumWin.cpp | 4 +- 3 files changed, 28 insertions(+), 13 deletions(-)
Darin Adler
Comment 2
2009-01-15 13:25:52 PST
Comment on
attachment 26770
[details]
patch v1 r=me
Dimitri Glazkov (Google)
Comment 3
2009-01-15 13:33:32 PST
Committed in
http://trac.webkit.org/changeset/39944
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug