2009-01-15  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=23354
        Fix up graphics/chromium files to account for Uniscribe style scrubbing.

        * platform/graphics/chromium/FontChromiumWin.cpp:
        (WebCore::windowsCanHandleTextDrawing):
        (WebCore::Font::selectionRectForComplexText):
        (WebCore::Font::drawComplexText):
        (WebCore::Font::floatWidthForComplexText):
        (WebCore::Font::offsetForPositionForComplexText):
        * platform/graphics/chromium/GlyphPageTreeNodeChromiumWin.cpp:
        (WebCore::fillNonBMPGlyphs):

Canonical link: https://commits.webkit.org/32140@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39944 268f45cc-cd09-0410-ab3c-d52691b4dbfc